# better-process

./: .travis.yml  README.md  better-process.cabal
src/System/Process/: Better.hs  Copied.hs
test/System/Process/: BetterSpec.hs
