name:             better-process
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2014 Simon Hengel
author:           Simon Hengel <sol@typeful.net>
maintainer:       Simon Hengel <sol@typeful.net>
build-type:       Simple
cabal-version:    >= 1.10

source-repository head
  type: git
  location: https://github.com/sol/better-process

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
      System.Process.Better
  other-modules:
      System.Process.Copied
  build-depends:
      base == 4.*
    , deepseq
    , process
  default-language: Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  other-modules:
      System.Process.BetterSpec
  build-depends:
      base == 4.*
    , better-process
    , hspec >= 1.5
  default-language: Haskell2010
